# teamchallenge_1444

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
project_1444/: Jwellary Shop Management System UML Diagram _ FreeProjectz.html  db_old.sqlite3  manage.py
project_1444/Jwellary Shop Management System UML Diagram _ FreeProjectz_files/: A.css_Gh89ghghPGElqiPEfyNAFag8cZcfml7920OkoVV4EeA.css.pagespeed.cf.91yhje1Bxd.css  A.css_W_zuS7o594YyOKAnjUktZqLmUDQiSjvMDJkVn5ae6AI.css.pagespeed.cf.s3wm3KSOYU.css  A.css_fFHorXUT6HYtqjHmM96JKP4EA0sskfD4Jrgj999B9ko.css.pagespeed.cf.adPHDId6rx.css  SjXeZ3bX9RGZW2ORRNtl0xKb3cMTEiDVy1kSoTvgtAI.js.Без названия  ads(1).html  ads.html  aframe.html  f(10).txt  f(7).txt  f(8).txt  f(9).txt  js  js_YD9ro0PAqY25gGWrTki6TjRUG8TdokmmxjfqpNNfzVU.js.pagespeed.jm.CRRpiZrWht.js.Без названия  rul.html  saved_resource(1).html  saved_resource(3).html  saved_resource.html  zrt_lookup_fy2021(1).html  zrt_lookup_fy2021(2).html  zrt_lookup_fy2021.html
project_1444/product/: admin.py  forms.py  models.py  models_old.py  serializers.py  views.py
project_1444/product/migrations/: 0001_initial.py  0002_productimage.py  0002_remove_product_jewerly_type_alter_product_options_and_more.py  0003_product_images_alter_productimage_product.py  0004_category_of_jewelry_remove_product_metal_color_and_more.py  0005_product_author_product_description_product_ean_13_and_more.py  0006_alter_product_author.py  0012_alter_stones_category.py  (+7 more)
project_1444/project_1444/: asgi.py  settings.py  urls.py  wsgi.py
project_1444/users/: models.py
